# obs-studio

cmake/Modules/: FindWebRTC.cmake
libobs/: obs-source.c  obs.c  obs.h
libobs-opengl/: gl-subsystem.c
obs/: CMakeLists.txt  window-basic-filters.cpp  window-basic-filters.hpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-properties.cpp
obs/data/locale/: en-US.ini
obs/data/themes/: Dark.qss
obs/forms/: OBSBasicFilters.ui
plugins/: CMakeLists.txt
plugins/obs-filters/: CMakeLists.txt  mask-filter.c  obs-filters.c
plugins/obs-filters/data/: mask_filter.effect
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-webrtc/: CMakeLists.txt  obs-webrtc.cpp  webrtc-output.cpp
